# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[package]
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
name = "dns-starter-rust"
version = "0.1.0"

# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[dependencies]
anyhow = "1.0.68" # error handling
byteorder = "1.5.0" 
bytes = "1.3.0" # helps manage buffers
nom = "7.1.3" # parsing
rand = "0.8.5" # randomness
thiserror = "1.0.38" # error handling
trust-dns-resolver = "*"
